assets/css/less/admin/notification.less
.wpbdp_notification_buttons() {
	border-radius: 12px;
	background-color: @text-color;
	color: @white;
	padding: 5px 15px;
}

.post-type-wpbdp_listing .notice:not(.wpbdp-inline-notice),
.wpbdp-admin-layout .notice:not(.wpbdp-inline-notice),
.directory_page_wpbdp_settings .notice:not(.wpbdp-inline-notice),
.wpbdp-admin-page .notice:not(.wpbdp-inline-notice) {
	display: none;
}

.wpbdp-bell-notifications-list {
	clear: both;
	margin: 0;
	li {
		display: block !important;
	}
}

.wpbdp-bell-notification {
	display: none;
	position: fixed;
	right: 20px;
	bottom: 20px;

	svg {
		height: 48px;
		width: 48px;
		display: block;
	}
}

.wpbdp-bell-notification-icon:focus {
	outline: 0;
	.wpbdp-shadow-box();
}

.wpbdp-bell-notification-icon,
.wpbdp-bell-notifications li {
	.wpbdp-shadow-box();
}

.wpbdp-bell-notifications {
	position: fixed;
	bottom: 69px;
	min-width: 20%;
	right: 20px;
	max-width: 400px;
	font-size: 13px;

	li {
		padding: 10px 25px;
		margin: 0 auto 4px;

		.notice-dismiss {
			right: 0;
			top: 7px;
		}
	}
}

.wpbdp-bell-notifications-close {
	.wpbdp_notification_buttons();
	text-decoration: none;
	display: block;
	float: right;
	margin-bottom: 4px;

	&:hover {
		color: @white;
	}
}

#wpbdp-snackbar-notices {
	color: @white;
	text-align: center;
	position: fixed;
	bottom: 0;
	left: 180px;
	z-index: 1;
	max-width: 50%;
	min-width: 250px;
}

.wpbdp-snackbar {
	width: 100%;
	background-color: @text-color;
	border-radius: 12px;
	padding: 16px;
	margin-bottom: 4px;
	opacity: 0;
	display: inline-block;
	-webkit-animation: wpbdp-fade-in-out 10s linear forwards;
	animation: wpbdp-fade-in-out 10s linear forwards;
	p, a {
		margin: 0;
		color: @white !important;
	}
	button {
		&::before {
			color: @white !important;
		}
	}
}

.folded .wpbdp-snackbar {
	left: 56px;
}

@media screen and (max-width: 782px) {
	.wpbdp-snackbar {
		left: 10px;
		max-width: 90%;
	}
}

.keyframes( @name; @arguments ) {
	@-moz-keyframes @name { @arguments(); }
	@-webkit-keyframes @name { @arguments(); }
	@keyframes @name { @arguments(); }
}

.keyframes( wpbdp-fade-in-out; {
	2% { opacity: 1; }
	98% { opacity: 1; }
});

